2002-07-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: RTEMS_TOP(../..).

2002-07-01    Joel Sherrill <joel@OARcorp.com>

	* Mega patch merge to change the format of the object IDs to
	loosen the dependency between the SCORE and the various APIs.
	There was considerable work to simplify the object name management
        and it appears that the name_table field is no longer needed.
	This patch also includes the addition of the internal mutex
	which is currently only used to protect some types of allocation
	and deallocation.  This significantly can reduce context 
	switch latency under certain circumstances.  In particular,
	some heap/region operations were O(n) and had dispatching
	disabled.  This should help enormously.  With this merge,
	the patch is not as clean as it should be.  In particular,
	the documentation has not been modified to reflect the new object
	ID layout, the IDs in the test screens are not updated, and
	_Objects_Get_information needs to be a real routine not inlined.
	As part of this patch a lot of MP code for thread/proxy blocking
	was made conditional and cleaned up.
	* include/rtems/posix/key.h, src/cond.c, src/condinit.c, src/intr.c,
	src/key.c, src/keycreate.c, src/keydelete.c, src/killinfo.c,
	src/mqueue.c, src/mqueuecreatesupp.c, src/mutex.c, src/mutexinit.c,
	src/psignal.c, src/pthread.c, src/semaphore.c,
	src/semaphorecreatesupp.c:  Modified as part of above.

2002-07-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_PROJECT_ROOT.

2002-06-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use AC_CONFIG_AUX_DIR(../..).
	Add AC_PROG_RANLIB.

2002-06-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove references to RTEMS_BSP.
	* src/Makefile.am: Add libposix.a.

2002-06-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Include $(top_srcdir)/../automake/*.am.
	* Makefile.am: Include $(top_srcdir)/../automake/*.am.
	Use ../aclocal.