@@ -27,9 +27,20 @@ void pthread_testcancel( void )
 {
   POSIX_API_Control                 *thread_support;
 
+  /*
+   *  Don't even think about deleting a resource from an ISR.
+   *  Besides this request is supposed to be for _Thread_Executing
+   *  and the ISR context is not a thread.
+   */
+
+  if ( _ISR_Is_in_progress() ) 
+    return;
+
   thread_support = _Thread_Executing->API_Extensions[ THREAD_API_POSIX ];
  
-  if ( thread_support->cancelability_state == PTHREAD_CANCEL_ENABLE &&
-       thread_support->cancelation_requested )
-    _POSIX_Thread_cancel_run( _Thread_Executing );
+  _Thread_Disable_dispatch();
+    if ( thread_support->cancelability_state == PTHREAD_CANCEL_ENABLE &&
+         thread_support->cancelation_requested )
+      _POSIX_Threads_cancel_run( _Thread_Executing );
+  _Thread_Enable_dispatch();
 }
